feat: add styles for links and change colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header class="header">
             <div class="container header__container">
-                <div class="name">Andrey Park</div>
+                <div class="name">RS School | CV#3. CV. Cross-Check</div>
             </div>
         </header>
         <main class="main">
@@ -25,12 +25,12 @@
 
                     <ul class="contacts-list">
                         <li class="contacts-list__item">
-                            <a href="mailto: andrey.pak85@gmail.com">
+                            <a href="mailto:andrey.pak85@gmail.com">
                                 email -andrey.pak85@gmail.com
                             </a>
                         </li>
                         <li class="contacts-list__item">
-                            <a href="tel: +77017370818">
+                            <a href="tel:+77017370818">
                                 phone - +7 701 737 0818
                             </a>
                         </li>
@@ -94,7 +94,7 @@
         </main>
         <footer class="footer">
             <div class="container footer__container">
-                <a class="link" href="https://rs.school/js/" target="blank">
+                <a class="" href="https://rs.school/js/" target="blank">
                     <img class="logo" src="./asssets/rs_school_js.svg" alt="" />
                 </a>
 
