fix: links and change color for background

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </a>
                         </li>
                         <li class="contacts-list__item">
-                            <a href="t.me/andrey_park" target="_blank">
+                            <a href="https://t.me/andrey_park" target="blank">
                                 t.me/andrey_park
                             </a>
                         </li>
@@ -94,6 +94,10 @@
         </main>
         <footer class="footer">
             <div class="container footer__container">
+                <a href="https://github.com/andreyPak85" target="_blank"
+                    >GitHub Andrey</a
+                >
+
                 <a class="" href="https://rs.school/js/" target="blank">
                     <img class="logo" src="./asssets/rs_school_js.svg" alt="" />
                 </a>
@@ -101,6 +105,8 @@
                 <a class="link" href="https://rs.school/js/" target="blank">
                     RS School
                 </a>
+
+                <span>2022</span>
             </div>
         </footer>
     </body>
