feat: add profile picture

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <main class="main">
             <div class="container container__main">
                 <aside class="sidebar">
+                    
+                    <div class="photo">
+                        <img src="https://images.findagrave.com/photos/2017/183/612_1499124961.jpg" alt="">
+                    </div>
+
                     <strong> Andrey Park </strong>
                     <hr />
 
