refactor: add section tags

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <main class="main">
             <div class="container container__main">
                 <aside class="sidebar">
-                    
                     <div class="photo">
-                        <img src="https://images.findagrave.com/photos/2017/183/612_1499124961.jpg" alt="">
+                        <img
+                            src="https://images.findagrave.com/photos/2017/183/612_1499124961.jpg"
+                            alt=""
+                        />
                     </div>
 
                     <strong> Andrey Park </strong>
@@ -63,37 +65,43 @@
                     </ul>
                 </aside>
                 <div class="content">
-                    <h1>Frontend developer</h1>
-                    <p class="description">Try to learn frontend.</p>
-                    <hr />
-
-                    <h2>Skills:</h2>
-                    <ul>
-                        <li>HTML/CSS</li>
-                        <li>JS / Typescript</li>
-                        <li>React / Angular</li>
-                        <li>
-                            Docker / CICD / GIT / AWS(S3, Route53, CloudFront)
-                        </li>
-                    </ul>
-                    <hr />
-                    <h2>Education:</h2>
-                    <ul>
-                        <li>
-                            Kazakh National Technical University - Information
-                            System (2008)
-                        </li>
-                        <li>
-                            Internation Academy of Buisness - Account (2012)
-                        </li>
-                    </ul>
-                    <hr />
-                    <h2>Languages:</h2>
-                    <ul>
-                        <li>Russian - native</li>
-                        <li>English - pre intermediate</li>
-                        <li>Kazakh - basic</li>
-                    </ul>
+                    <section>
+                        <h1>Frontend developer</h1>
+                        <p class="description">Try to learn frontend.</p>
+                        <hr />
+                    </section>
+                    <section>
+                        <h2>Skills:</h2>
+                        <ul>
+                            <li>HTML/CSS</li>
+                            <li>JS / Typescript</li>
+                            <li>React / Angular</li>
+                            <li>
+                                Docker / CICD / GIT / AWS(S3, Route53,
+                                CloudFront)
+                            </li>
+                        </ul>
+                        <hr />
+                    </section>
+                    <section>
+                        <h2>Education:</h2>
+                        <ul>
+                            <li>
+                                Kazakh National Technical University -
+                                Information System (2008)
+                            </li>
+                            <li>
+                                Internation Academy of Buisness - Account (2012)
+                            </li>
+                        </ul>
+                        <hr />
+                        <h2>Languages:</h2>
+                        <ul>
+                            <li>Russian - native</li>
+                            <li>English - pre intermediate</li>
+                            <li>Kazakh - basic</li>
+                        </ul>
+                    </section>
                 </div>
             </div>
         </main>
