fix: change main tag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="name">RS School | CV#3. CV. Cross-Check</div>
             </div>
         </header>
-        <main class="main">
+        <div class="main">
             <div class="container container__main">
                 <aside class="sidebar">
                     <div class="photo">
@@ -64,7 +64,7 @@
                         </li>
                     </ul>
                 </aside>
-                <div class="content">
+                <main class="content">
                     <section>
                         <h1>Frontend developer</h1>
                         <p class="description">Try to learn frontend.</p>
@@ -102,9 +102,9 @@
                             <li>Kazakh - basic</li>
                         </ul>
                     </section>
-                </div>
+                </main>
             </div>
-        </main>
+        </div>
         <footer class="footer">
             <div class="container footer__container">
                 <a href="https://github.com/andreyPak85" target="_blank"
