feat: add block projects and block code example

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="photo">
                         <img
                             src="https://images.findagrave.com/photos/2017/183/612_1499124961.jpg"
-                            alt=""
+                            alt="My photo"
                         />
                     </div>
 
@@ -100,6 +100,34 @@
                             <li>Russian - native</li>
                             <li>English - pre intermediate</li>
                             <li>Kazakh - basic</li>
+                        </ul>
+                        <hr />
+                    </section>
+                    <section>
+                        <h2>Code Example</h2>
+                        <code class="code-example">
+                            function groupByKey(arr, key) { return
+                            arr.reduce((acc, item ) => { if (acc[`${key}`]) {
+                            acc.push(item) } else { acc[`${key}] = [...item] }
+                            return acc; }) }
+                        </code>
+                        <hr />
+                    </section>
+                    <section>
+                        <h2>Projects</h2>
+                        <ul>
+                            <li>
+                                <a
+                                    href="https://github.com/AndreyPak85/Java.Spring.CRUD"
+                                    >Java(Spring) - simple CRUD</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://github.com/AndreyPak85/sapa-task"
+                                    >React simple stepper</a
+                                >
+                            </li>
                         </ul>
                     </section>
                 </main>
